# AED-Simmiluation-QT

./: README.md
AED_Sim/: AedInstruction.cpp  AedInstruction.h  AedStates.h  CMakeLists.txt  SafteyMesures.cpp  SafteyMesures.h  SelfTest.cpp  SelfTest.h  ShockButton.cpp  ShockButton.h  TestCases.cpp  TestCases.h  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-3004project-Qt_6_6_0_for_macOS-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-3004project-Qt_6_6_0_for_macOS-Debug/.cmake/api/v1/reply/: cache-v2-28bcd998cb21bcab00d9.json  cmakeFiles-v1-7c0befb33f4f356f1826.json  codemodel-v2-73d50451ba67c25c5841.json  directory-.-Debug-17a169170ea15bbad167.json  index-2023-11-22T04-44-45-0873.json  target-3004project-Debug-b28c44297ceee5ff4c42.json  target-3004project_autogen-Debug-9e9691502ee0f99c035c.json  target-3004project_autogen_timestamp_deps-Debug-31655d6bbfa45bef561c.json
build-3004project-Qt_6_6_0_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-3004project-Qt_6_6_0_for_macOS-Debug/3004project.app/Contents/: Info.plist
build-AED_Sim-Qt_6_6_0_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-AED_Sim-Qt_6_6_0_for_macOS-Debug/.cmake/api/v1/reply/: cache-v2-5635af1ba1957cdca4aa.json  codemodel-v2-a286d3b87f0294e2435d.json  (+6 more)
build-AED_Sim-Qt_6_6_0_for_macOS-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-33a106532163eef35932.json  codemodel-v2-57324e64f469314fd8af.json  codemodel-v2-d6b51e0f42e6b28bc41a.json  index-2023-12-07T04-54-27-0416.json  target-AED_SIM-Debug-54b23bc8f3d95aa32184.json  target-AED_SIM-Debug-c53eb54bddc9ce7b4979.json  target-AED_SIM_autogen-Debug-edaeb3fd961566730bf6.json
build-AED_Sim-Qt_6_6_0_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-AED_Sim-Qt_6_6_0_for_macOS-Debug/AED_SIM_autogen/: deps  mocs_compilation.cpp
build-AED_Sim-Qt_6_6_0_for_macOS-Debug/AED_SIM_autogen/EWIEGA46WW/: moc_AedInstruction.cpp  moc_AedInstruction.cpp.d  moc_SelfTest.cpp  moc_SelfTest.cpp.d  moc_ShockButton.cpp  moc_ShockButton.cpp.d  moc_TestCases.cpp  moc_TestCases.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-AED_Sim-Qt_6_6_0_for_macOS-Debug/AED_SIM_autogen/include/: ui_mainwindow.h
build-AED_Sim-Qt_6_6_0_for_macOS-Debug/AED_Sim.app/Contents/: Info.plist
build-AED_Sim-Qt_6_6_0_for_macOS-Debug/AED_Sim.app/Contents/MacOS/: AED_SIM
